--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,10 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
+    db:
+        type: postgresql:13
+        disk: 1024
+        size: S
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
